test/negative/t25.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : x:('a -> 'b -> 'c) -> 'a -> 'b -> 'c[@@gospel {| r = f x y z |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : x:('a -> 'b -> 'c) -> 'a -> 'b -> 'c
(*@ r = f x y z
     *)
File "t25.mli", line 12, characters 7-8:
Error: Type checking error: parameter do not match with val type.
